# super-download

./: .gitignore  CMakeLists.txt  README.md  installer.iss
browser_extension/: background.js  launch.html  manifest.json
src/: main.cpp
src/core/: CMakeLists.txt  block.cpp  block.h  block_splitter.cpp  block_splitter.h  download_manager.cpp  download_manager.h  file_classifier.cpp  file_classifier.h  http_engine.cpp  http_engine.h  logger.cpp  logger.h  meta_file.cpp  meta_file.h  progress_monitor.cpp  progress_monitor.h  task.cpp  task.h  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h  token_bucket.cpp  token_bucket.h
src/gui/: CMakeLists.txt  clipboard_monitor.cpp  clipboard_monitor.h  main_window.cpp  main_window.h  new_download_dialog.cpp  new_download_dialog.h  settings_dialog.cpp  settings_dialog.h  style.h  task_model.cpp  task_model.h  ws_server.cpp  ws_server.h
tests/: CMakeLists.txt  placeholder_test.cpp  test_block_splitter.cpp  test_file_classifier.cpp  test_http_retry.cpp  test_logger.cpp  test_meta_file.cpp  test_progress_monitor.cpp  test_task_queue.cpp  test_thread_pool.cpp  test_token_bucket.cpp
